table ajustes {
  id int [pk, increment]
  nombre varchar
  descripcion text
  sucursal varchar
  direccion text
  telefono varchar
  logo varchar
  logo_auto varchar
  divisa varchar
  correo_electronico varchar
  pagina_web varchar
  created_at timestamp 
  updated_at timestamp 
}
table usuarios {
  id int [pk, increment]
  name varchar
  email varchar 
  password varchar
  remember_token varchar 

  nombres varchar
  apellidos varchar
  tipo_documento varchar
  nro_documento varchar
  telefono varchar
  fecha_nacimiento date
  genero varchar
  direccion text
  foto varchar
  contacto_nombre varchar
  contacto_telefono varchar
  contacto_parentesco varchar

  created_at timestamp 
  updated_at timestamp 
}
Table espacios{
  id int [pk, increment]
  numero varchar
  estado varchar

  created_at timestamp 
  updated_at timestamp
}

Table tarifas {
  id int [pk, increment]
  nombre varchar
  tipo varchar
  cantidad int
  costo decimal(10,2)
  minutos_de_gracia int
  
  created_at timestamp 
  updated_at timestamp
}

Table clientes{
  id int [pk, increment]
  nombres string
  numero_documento string
  email string
  telefono string
  genero string
  estado boolean

  created_at timestamp 
  updated_at timestamp
}

Table vehiculos{
  id int [pk, increment]
  cliente_id int [ref: > clientes.id]
  placa string
  marca string
  modelo string
  color string
  tipo string

  created_at timestamp 
  updated_at timestamp
}

Table tickets{
  id int [pk, increment]
  espacio_id int [ref: > espacios.id]
  cliente_id int [ref: > clientes.id]
  vehiculo_id int [ref: > vehiculos.id]
  tarifa_id int [ref: > tarifas.id]
  usuario_id int [ref: > usuarios.id]

  codigo_ticket string
  fecha_ingreso date
  hora_ingreso date
  fecha_salida date
  hora_salida date
  tiempo_total string
  monto_total decimal
  estado_ticket string
  obs string

  created_at timestamp 
  updated_at timestamp
}